# microvm

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE.md  MANIFEST.in  MICROVM  README.md  docker-compose.yml  microvm_cli.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: MICROVM.srt  MICROVM.txt  MicroVM_how_to_run_a_nativeplatformsagnositcervice_in_an_isolated_enviroment.txt
examples/mixed-workspace/: microvm.workspace.json
examples/mixed-workspace/components/api/: server.py
examples/mixed-workspace/components/worker/: index.js
examples/node-workspace/: microvm.workspace.json
examples/node-workspace/components/worker/: index.js
examples/pong-microvm/: README.md  microvm.workspace.json
examples/pong-microvm/components/common/: pong_common.py
examples/pong-microvm/components/matchmaking/: server.py
examples/pong-microvm/components/polycall/: server.py
examples/pong-microvm/components/u-agent/: server.py
examples/pong-microvm/components/voice/: server.py
examples/pong-microvm/components/web/: server.py
examples/pong-microvm/components/web/static/: app.js  index.html  styles.css
examples/python-workspace/: microvm.workspace.json
examples/python-workspace/components/api/: server.py
microvm/: __init__.py  __main__.py  cli.py  mmuko.py  polycall_adapter.py  resources.py
tests/: test_microvm_cli.py  test_mmuko_polycall_pong.py
